@@ -329,6 +329,8 @@
 	[resolution]
 		definition = "default"
 
+		easy_close = "true"
+
 		[grid]
 
 			[row]
@@ -401,7 +403,9 @@
 				[/column]
 
 			[/row]
-
+# Comment out the button for now since it's no longer needed.
+# It will be reenabled later to show the buttons optionally.
+#ifdef GUI_NO_SUCH_DEFINITION
 			[row]
 
 				[column]
@@ -419,7 +423,7 @@
 				[/column]
 
 			[/row]
-
+#endif
 		[/grid]
 
 	[/resolution]
