@@ -70,6 +70,9 @@ public:
 	unsigned get_state() const { return state_; }
 
 	/** Inherited from tcontrol. */
+	bool does_block_easy_close() const { return true; }
+
+	/** Inherited from tcontrol. */
 	void update_canvas();
 	
 	/** Inherited from tselectable_ */
